--- a/index.html
+++ b/index.html
@@ -67,14 +67,18 @@
 	<!-- table -->
 			<div class="col-xs-6 table-responsive">
 				<table class="table table-hover">
-					<tr style="font-weight:bold">
-						<th>Train Name</th>
-						<th>Destinantion</th>
-						<th>Frequency (mins)</th>
-						<th>Next Arrival</th>
-						<th>Minutes Away</th>
-					</tr>
-			
+					<thead>
+						<tr style="font-weight:bold">
+						
+							<th>Train Name</th>
+							<th>Destinantion</th>
+							<th>Frequency (mins)</th>
+							<th>Next Arrival</th>
+							<th>Minutes Away</th>
+						
+						</tr>
+					</thead>
+					<tbody></tbody>
 				</table>
 			</div>
 		
